--- a/code/01_Get_Abstrast.ipynb
+++ b/code/01_Get_Abstrast.ipynb
@@ -8,7 +8,7 @@
     "<img src=\"http://imgur.com/1ZcRyrc.png\" style=\"float: left; margin: 20px; height: 55px\">\n",
     "\n",
     "## Capstone Project: Clustering Logistics Research Papers\r",
-    "**Part 1: Get Abstract** | [Part 2: EDA](02_EDA.ipynb) | [Part 3: Vectorizer Performance](..) | [Part 4: Model Tuning](..)\r\n",
+    "**Part 1: Get Abstract** | [Part 2: Add Label](02_Add_Label.ipynb) | [Part 3: EDA](03_EDA.ipynb) | [Part 4: Model Tuning](..)\r\n",
     "\n"
    ]
   },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "98668b59-c08d-4cea-969f-e7d3ce3dc671",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
    "id": "e036355d-a325-4c87-a9e3-9d5d8094bc22",
    "metadata": {},
    "source": [
-    "The abstract always be contained within the lines following the line that contains the word 'บทคัดย่อ' and preceding the line that contains the word 'บทนำ'"
+    "The abstract is always contained within the lines following the line that contains or is equal to the word `บทคัดย่อ`, and preceding the line that usually contains the word `บทนำ`. However, some files begin with the following words: `ที่มาและความสำคัญ`, `1ที่มา`, `คำสำคัญ`, `นิยามศัพท์เฉพาะ`, and `ทบทวนวรรณกรรม`."
    ]
   },
   {
@@ -142,7 +142,7 @@
     "    all_data = []  # List to hold data for the DataFrame\n",
     "\n",
     "    keyword = 'บทคัดย่อ'\n",
-    "    stop_phrase = 'บทนำ'\n",
+    "    stop_phrases = ['บทนำ','ที่มาและความสำคัญ','1ที่มา','คำสำคัญ','นิยามศัพท์เฉพาะ','ทบทวนวรรณกรรม']\n",
     "    for filename in os.listdir(folder_path):\n",
     "        file_path = os.path.join(folder_path, filename)\n",
     "        captured_lines = []\n",
@@ -159,7 +159,6 @@
     "    \n",
     "            # Split the extracted text into lines\n",
     "            lines = thai_text.split('\\n')\n",
-    "            article = next((line for line in lines if line.strip() != ''), None)\n",
     "\n",
     "            # Flag to start capturing text after finding the first matching line\n",
     "            capture_text = False\n",
@@ -167,11 +166,15 @@
     "            for line in lines:\n",
     "                if not capture_text:\n",
     "                    # Check if line contains any of the keywords\n",
-    "                    if keyword in line :\n",
+    "                    if line.strip() == keyword:\n",
     "                        capture_text = True  # Start capturing from this line onward\n",
+    "                    elif keyword in line:\n",
+    "                        capture_text = True\n",
+    "                        captured_lines.append(line) # Start capturing from this line onward\n",
+    "                     \n",
     "                else:\n",
     "                    # Stop capturing if the line contains a stop phrase\n",
-    "                    if stop_phrase in line :\n",
+    "                    if any(stop_phrase in line for stop_phrase in stop_phrases):\n",
     "                        break\n",
     "                    captured_lines.append(line)\n",
     "            \n",
@@ -194,9 +197,8 @@
     "    \n",
     "    end_time  = time.time()\n",
     "    # Calculate and print the runtime\n",
-    "    print(f\"Runtime: {end_time - start_time:.0f} seconds\")\n",
+    "    print(f\"Runtime: {end_time - start_time:.0f} seconds for get abstract from {len(os.listdir(folder_path))} files\")\n",
     "\n",
-    "    \n",
     "    return df"
    ]
   },
@@ -258,7 +260,7 @@
    },
    "outputs": [],
    "source": [
-    "master_df = pd.read_excel('../article/Student_CoopEdu_MasterData.xlsx')\n",
+    "master_df = pd.read_excel('../data/Student_CoopEdu_MasterData.xlsx')\n",
     "master_df.head()"
    ]
   },
@@ -313,7 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove in columns project name and abstract"
+    "# This list contains some company-related words to ensure they are removed from the project name and abstract.\n",
+    "sensitive_list = [**********]"
    ]
   },
   {
@@ -323,9 +326,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove in columns project name and abstract\n",
     "def remove_company_names(row,column_name):\n",
     "    words_in_company = set(row['company'].split())  \n",
     "    cleaned_text = ' '.join([word for word in row[column_name].split() if word not in words_in_company])  \n",
+    "   \n",
+    "    # Replace sensitive values from sensitive_list\n",
+    "    for sensitive_value in sensitive_list:\n",
+    "        cleaned_text = cleaned_text.replace(sensitive_value, '')\n",
+    "    \n",
     "    return cleaned_text"
    ]
   },
@@ -339,17 +348,6 @@
     "# Apply the function to clean columns abstract and project\n",
     "df['project'] = df.apply(remove_company_names, axis=1, column_name='project')\n",
     "df['abstract'] = df.apply(remove_company_names, axis=1, column_name='abstract')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d67bd030-e314-41fb-88e1-de67c60d7332",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crosscheck_df = df[['file_path','project']]\n",
-    "crosscheck_df.head()"
    ]
   },
   {
@@ -370,16 +368,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crosscheck_df.to_csv('../data/crosscheck_table.csv', index = False)\n",
     "final_df.to_csv('../data/abstract_table.csv', index = False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "new",
    "language": "python",
-   "name": "python3"
+   "name": "new"
   },
   "language_info": {
    "codemirror_mode": {
@@ -391,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
