--- a/code/07.Final_Model.ipynb
+++ b/code/07.Final_Model.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "4661e514-973e-4433-ab02-fd6eb93c4f20",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "165c82ae-85aa-4658-8457-12190a30fb96",
    "metadata": {},
    "outputs": [
@@ -114,6 +114,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>project</th>\n",
        "      <th>abstract</th>\n",
        "      <th>content</th>\n",
@@ -128,10 +129,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>การจัดทำคู่มือขั้นตอนการดำเนินการการนำเข้าคราฟ...</td>\n",
        "      <td>ผู้วิจัยได้ตระหนักถึงความยุ่งยากของขั้นตอนการน...</td>\n",
        "      <td>การจัดทำคู่มือขั้นตอนการดำเนินการการนำเข้าคราฟ...</td>\n",
-       "      <td>Import-Export and International Trade</td>\n",
+       "      <td>Import-Export</td>\n",
        "      <td>5</td>\n",
        "      <td>11582</td>\n",
        "      <td>860</td>\n",
@@ -140,10 +142,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>การเสนอแนวทางในการพัฒนาและสร้างความสัมพันธ์กับ...</td>\n",
        "      <td>งานวิจัยครั้งนี้มีวัตถุประสงค์เพื่อเสนอแนวทางใ...</td>\n",
        "      <td>การเสนอแนวทางในการพัฒนาและสร้างความสัมพันธ์กับ...</td>\n",
-       "      <td>Procurement</td>\n",
+       "      <td>Procurement and Sourcing</td>\n",
        "      <td>0</td>\n",
        "      <td>15230</td>\n",
        "      <td>1186</td>\n",
@@ -152,10 +155,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>การพัฒนามาตรฐานรถขนส่งวัตถุอันตรายที่เข้ามาในค...</td>\n",
        "      <td>ดำเนินธุรกิจเป็นผู้นำเข้า และจัดจำหน่ายสินค้าก...</td>\n",
        "      <td>การพัฒนามาตรฐานรถขนส่งวัตถุอันตรายที่เข้ามาในค...</td>\n",
-       "      <td>Logistics and Distribution</td>\n",
+       "      <td>Distribution and Transportation</td>\n",
        "      <td>3</td>\n",
        "      <td>13587</td>\n",
        "      <td>1964</td>\n",
@@ -164,10 +168,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>แนวทางการปรับปรุงกระบวนการการส่งเอกสารใบกำกับภ...</td>\n",
        "      <td>การวิจัยครั้งนี้มีวัตถุประสงค์ เพื่อศึกษาขั้นต...</td>\n",
        "      <td>แนวทางการปรับปรุงกระบวนการการส่งเอกสารใบกำกับภ...</td>\n",
-       "      <td>Procurement</td>\n",
+       "      <td>Procurement and Sourcing</td>\n",
        "      <td>0</td>\n",
        "      <td>13124</td>\n",
        "      <td>1260</td>\n",
@@ -176,10 +181,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>การศึกษาเทคนิคการพยากรณ์ยอดขายสายไฟที่เหมาะสม</td>\n",
        "      <td>จากสถานการณ์การแพร่ระบาดของเชื้อไวรัสโคโรนา 20...</td>\n",
        "      <td>การศึกษาเทคนิคการพยากรณ์ยอดขายสายไฟที่เหมาะสม ...</td>\n",
-       "      <td>Demand Planning and Forecasting</td>\n",
+       "      <td>Demand Planning</td>\n",
        "      <td>4</td>\n",
        "      <td>25247</td>\n",
        "      <td>1956</td>\n",
@@ -191,12 +197,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             project  \\\n",
-       "0  การจัดทำคู่มือขั้นตอนการดำเนินการการนำเข้าคราฟ...   \n",
-       "1  การเสนอแนวทางในการพัฒนาและสร้างความสัมพันธ์กับ...   \n",
-       "2  การพัฒนามาตรฐานรถขนส่งวัตถุอันตรายที่เข้ามาในค...   \n",
-       "3  แนวทางการปรับปรุงกระบวนการการส่งเอกสารใบกำกับภ...   \n",
-       "4      การศึกษาเทคนิคการพยากรณ์ยอดขายสายไฟที่เหมาะสม   \n",
+       "   Unnamed: 0                                            project  \\\n",
+       "0           0  การจัดทำคู่มือขั้นตอนการดำเนินการการนำเข้าคราฟ...   \n",
+       "1           1  การเสนอแนวทางในการพัฒนาและสร้างความสัมพันธ์กับ...   \n",
+       "2           2  การพัฒนามาตรฐานรถขนส่งวัตถุอันตรายที่เข้ามาในค...   \n",
+       "3           3  แนวทางการปรับปรุงกระบวนการการส่งเอกสารใบกำกับภ...   \n",
+       "4           4      การศึกษาเทคนิคการพยากรณ์ยอดขายสายไฟที่เหมาะสม   \n",
        "\n",
        "                                            abstract  \\\n",
        "0  ผู้วิจัยได้ตระหนักถึงความยุ่งยากของขั้นตอนการน...   \n",
@@ -212,12 +218,12 @@
        "3  แนวทางการปรับปรุงกระบวนการการส่งเอกสารใบกำกับภ...   \n",
        "4  การศึกษาเทคนิคการพยากรณ์ยอดขายสายไฟที่เหมาะสม ...   \n",
        "\n",
-       "                                category  category_id  content_length  \\\n",
-       "0  Import-Export and International Trade            5           11582   \n",
-       "1                            Procurement            0           15230   \n",
-       "2             Logistics and Distribution            3           13587   \n",
-       "3                            Procurement            0           13124   \n",
-       "4        Demand Planning and Forecasting            4           25247   \n",
+       "                          category  category_id  content_length  \\\n",
+       "0                    Import-Export            5           11582   \n",
+       "1         Procurement and Sourcing            0           15230   \n",
+       "2  Distribution and Transportation            3           13587   \n",
+       "3         Procurement and Sourcing            0           13124   \n",
+       "4                  Demand Planning            4           25247   \n",
        "\n",
        "   abstract_length  content_word_count  abstract_word_count  \n",
        "0              860                2402                  171  \n",
@@ -227,7 +233,7 @@
        "4             1956                6114                  496  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,9 +582,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "new",
    "language": "python",
-   "name": "python3"
+   "name": "new"
   },
   "language_info": {
    "codemirror_mode": {
@@ -590,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
